# thence

./: .gitignore  Cargo.toml  LICENSE  PLAN-002-whence-simplified-checks-gate.md  README.md  RELEASE_NOTES.md  install.sh
.github/workflows/: release.yml
scripts/: agent-codex.sh  whence-agent-codex-real.sh  whence-agent-live-sim.sh
scripts/codex-real/prompts/: checks-proposer.txt  implementer.txt  reviewer-attempt1.txt  reviewer-later.txt
scripts/codex-real/schemas/: checks-proposer.schema.json  implementer.schema.json  reviewer.schema.json
specs/: PLAN-002-thence-simplified-checks-gate.md  REQ-001-thence-simple-supervisor-v1.md  REQ-001-whence-simple-supervisor-v1.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/checks/: config.rs  runner.rs
src/events/: mod.rs  projector.rs  schema.rs  store.rs
src/logging/: ndjson.rs
src/plan/: mod.rs  review_loop.rs  sanity.rs  translator.rs  validate.rs
src/policy/: mod.rs  rules.rs  spindle_bridge.rs
src/run/: lease.rs  loop.rs  mod.rs  packet.rs  scheduler.rs  transitions.rs
src/vcs/: merge.rs  mod.rs  worktree.rs
src/workers/: codex.rs  mod.rs  provider.rs  reviewer.rs
tests/: e2e.rs  policy_bridge.rs  projector.rs
