[package]
name = "whence"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.12", features = ["v4"] }
spindle-core = { git = "https://codeberg.org/anuna/spindle-rust", package = "spindle-core", rev = "2713ac906a089c61e85e239f8cbb1453bac4037e" }
spindle-parser = { git = "https://codeberg.org/anuna/spindle-rust", package = "spindle-parser", rev = "2713ac906a089c61e85e239f8cbb1453bac4037e" }

[dev-dependencies]
tempfile = "3.15"
